# ticos-llsync-port

./: CMakeLists.txt
data_template/: ble_qiot_template.c  ble_qiot_template.h
hal/esp32/: ble_qiot_ble_device.c  ble_qiot_ble_service.c  ble_qiot_config.h
hal/jieli/: ble_qiot_config.h  ble_qiot_export.c  ble_qiot_import.c  ll_sync_profile.h  ll_task.c
inc/: ble_qiot_export.h  ble_qiot_import.h
scripts/interpret_json_dt/src/: interpret_dt_ble.py
src/core/: ble_qiot_llsync_data.c  ble_qiot_llsync_device.c  ble_qiot_llsync_event.c  ble_qiot_llsync_ota.c  ble_qiot_llsync_utils.c  ble_qiot_service.c
src/internal_inc/: ble_qiot_crc.h  ble_qiot_llsync_device.h  ble_qiot_log.h
src/utils/: ble_qiot_utils_log.c
